# video-editor

.github/workflows/: linting.yml
video-editor-be/: .pre-commit-config.yaml  pyproject.toml  video-editor.py
video-editor-fe/: README.md  package-lock.json  package.json
