[tool.poetry]
name = "video-editor-be"
version = "0.1.0"
description = "The backend for a small video editor application."
authors = ["Bobotato <bhojwanialexander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^7.4.4"
black = "^24.1.0"
pre-commit = "^3.6.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
